--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Aldrumo\\Blocks\\BlocksServiceProvider"
+                "Aldrumo\\Blocks\\Providers\\BlocksServiceProvider"
             ]
         }
     }
